--- a/podfile
+++ b/podfile
@@ -6,5 +6,6 @@ target 'qc_ios_framework' do
     pod 'ReactiveCocoa', '2.5'
     pod 'AFNetworking', '~> 4.0'
     pod 'Masonry'
+    pod 'MMKV'
     
 end
