--- a/podfile
+++ b/podfile
@@ -7,5 +7,6 @@ target 'qc_ios_framework' do
     pod 'AFNetworking', '~> 4.0'
     pod 'Masonry'
     pod 'MMKV'
+    pod 'UIColor+Hex', '~> 1.0'
     
 end
